redirect entry point

--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "p5.js starter template",
   "version": "1.0.0",
   "description": "this is a template for p5.js",
-  "main": "sketch.js",
+  "main": "p5-template/sketch.js",
   "keywords": []
 }
