--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "p5.js starter template",
+  "name": "p5.js-template",
   "version": "1.0.0",
   "description": "this is a template for p5.js",
   "main": "p5-template/sketch.js",
