--- a/Class-Code/Elementary-CA/ghouston/package.json
+++ b/Class-Code/Elementary-CA/ghouston/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "change-this-name",
-    "version": "1.0.0",
-    "description": "this is a template for p5.js",
-    "main": "sketch.js",
-    "keywords": []
-  }  
+  "name": "Elementary-CA",
+  "version": "1.0.0",
+  "description": "this is a template for p5.js",
+  "main": "sketch.js",
+  "keywords": []
+}
